<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <ImageView
        android:id="@+id/image_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:src="@drawable/me"
        app:layout_constraintBottom_toTopOf="@+id/text_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_of_me" />

    <TextView

        android:id="@+id/text_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/me"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_me" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/button_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        app:layout_constraintBottom_toTopOf="@+id/button_buy_me_a_coffee"
        app:layout_constraintEnd_toStartOf="@+id/button_project_repository"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline5" />

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/button_project_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_repository"
        app:layout_constraintBottom_toBottomOf="@+id/button_website"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_website" />

    <Button
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/button_buy_me_a_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_me_a_coffee"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_website" />

    <TextView
        android:id="@+id/text_version"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>