<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:vumeter="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.25" />

        <io.gresse.hugo.vumeterlibrary.VuMeterView
            android:id="@+id/vumeter"
            android:layout_height="200dp"
            android:layout_width="0dp"
            android:paddingBottom="48dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            vumeter:vumeter_backgroundColor="?attr/colorPrimary"
            vumeter:vumeter_blockNumber="9"
            vumeter:vumeter_blockSpacing="15dp"
            vumeter:vumeter_blockMaxHeight="0"
            vumeter:vumeter_stopSize="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_noise_type"
            android:text="@string/noise_type"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/toggleButton_noise_type"
            app:layout_constraintBottom_toBottomOf="@+id/toggleButton_noise_type"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton_noise_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vumeter"
            app:singleSelection="true">
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/button_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/white"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/button_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pink"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_volume"
            android:text="@string/volume"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/slider_volume"
            app:layout_constraintBottom_toBottomOf="@+id/slider_volume" />

        <com.google.android.material.slider.Slider
            android:contentDescription="@string/volume_slider"
            android:id="@+id/slider_volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:valueFrom="1"
            android:valueTo="10"
            android:stepSize="1"
            android:layout_marginVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton_noise_type" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_fade_in"
            android:text="@string/fade_in"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/slider_fade_in"
            app:layout_constraintBottom_toBottomOf="@+id/slider_fade_in"/>

        <com.google.android.material.slider.Slider
            android:contentDescription="@string/fade_in_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/slider_fade_in"
            android:valueFrom="50"
            android:stepSize="50"
            app:tickVisible="false"
            android:valueTo="60000"
            android:layout_marginVertical="16dp"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/slider_volume"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_fade_out"
            android:text="@string/fade_out"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/slider_fade_out"
            app:layout_constraintBottom_toBottomOf="@+id/slider_fade_out"/>

        <com.google.android.material.slider.Slider
            android:contentDescription="@string/fade_out_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/slider_fade_out"
            android:valueFrom="50"
            android:stepSize="50"
            app:tickVisible="false"
            android:valueTo="60000"
            android:layout_marginVertical="16dp"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/slider_fade_in"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_auto_shutoff"
            android:text="@string/auto_shutoff"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/switch_auto_shutoff"
            app:layout_constraintBottom_toBottomOf="@+id/switch_auto_shutoff"/>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/button_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintEnd_toStartOf="@+id/switch_auto_shutoff"
            app:layout_constraintTop_toTopOf="@+id/switch_auto_shutoff"
            app:layout_constraintBottom_toBottomOf="@+id/switch_auto_shutoff"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_auto_shutoff"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toBottomOf="@+id/slider_fade_out"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Advanced Options: -->

        <TextView
            android:id="@+id/text_advanced_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/advanced_options"
            app:layout_constraintTop_toBottomOf="@+id/switch_auto_shutoff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="48dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_show_eq"
            android:text="@string/show_eq"
            android:visibility="gone"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/switch_show_eq"
            app:layout_constraintBottom_toBottomOf="@+id/switch_show_eq"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_show_eq"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:layout_marginVertical="16dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/text_advanced_options"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_buffer_size"
            android:text="@string/buffer_size"
            android:visibility="gone"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/menu_buffer_size"
            app:layout_constraintBottom_toBottomOf="@+id/menu_buffer_size"/>

        <Button
            style="?attr/materialIconButtonStyle"
            android:id="@+id/button_buffer_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/outline_info_24"
            app:layout_constraintStart_toEndOf="@+id/text_buffer_size"
            app:layout_constraintTop_toTopOf="@+id/text_buffer_size"
            app:layout_constraintBottom_toBottomOf="@+id/text_buffer_size"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu_buffer_size"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_show_eq">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:labelFor="@+id/menu_buffer_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:id="@+id/menu_buffer_size_value"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_fab_location"
            android:text="@string/fab_location"
            android:visibility="gone"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/menu_fab_location"
            app:layout_constraintBottom_toBottomOf="@+id/menu_fab_location"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu_fab_location"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_buffer_size">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:labelFor="@+id/menu_fab_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:id="@+id/menu_fab_location_value"
                android:visibility="gone" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>